
  XXX: generate tag summary

  * checks/changes-file.{desc,pm}:
    + [NT] Downgrade backports-changes-missing to a wishlist (I) tag.
      Thanks to Vincent Cheng for the report.  (Closes: #785084)
  * checks/files.pm:
    + [NT] Apply patch from Tomasz Buchert to avoid false-positive
      package-contains-timestamped-gzip in some cases.
      (Closes: #762105)

  * collection/unpacked:
    + [NT] Apply patch from Tomasz Buchert to extract the full time
      in UTC.

  * commands/reporting-sync-state.pm:
    + [NT] Read mirror files as UTF-8 files to avoid mojibake in
      maintainer names.  Once again, thanks to Andreas Rönnquist
      for the report.

  * debian/changelog:
    + [NT] Add missing list of new / removed tags to the
      entry for the previous release.

  * lib/Lintian/Path.pm:
    + [NT] Apply patch from Tomasz Buchert to add "timestamp"
      method.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Expand BTS links using https rather than http.

 -- Niels Thykier <niels@thykier.net>  Thu, 14 May 2015 09:11:05 +0200

lintian (2.5.31) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-intended-distribution
      - dbus-policy-excessively-broad
      - debian-pycompat-is-obsolete
      - debian-watch-file-accesses-pypi-over-http
      - debian-watch-file-unsupported-pypi-url
      - dep5-copyright-license-name-not-unique
      - dep5-file-paragraph-reference-header-paragraph
      - file-should-not-be-compressed
      - multiline-architecture-field
      - python-version-current-is-deprecated
      - uses-no-compression-for-control-tarball
      - uses-no-compression-for-data-tarball
      - xs-testsuite-header-in-debian-control
    + Removed:
      - bad-intended-distibution
      - compressed-objects.inv

  * checks/binaries.pm:
    + [BR] Do not tag with
      library-in-debug-or-profile-should-not-be-stripped
      when file add "not stripped, too many notes" to its
      output. Thanks to Jakub Wilk.  (Closes: #775760).